--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,8 @@ figure img {
     width: 100%;
     height: 100%;
     line-height:550%;
-    font-size: 2em;    
+    font-size: 1.5em;
+    padding-top: 1%;
 }
 
 /* style du conteneur des boutons "Réservez ici" et "Annulez ici" */
@@ -655,10 +656,9 @@ footer a:hover {
         font-weight: bold;
         width: 100%;
         height: 100%;
-        line-height:50%;
+        line-height: 350%;
         font-size: 1.1em;
-        padding-top: 5%;
-        padding-bottom: 5%;
+        padding-top: 20%;
         padding-left: 2%;
         padding-right: 2%;
     }
@@ -682,6 +682,21 @@ footer a:hover {
         width: 80%;
     }
 
+/*--- div #infos_station ---*/
+.close {
+    font-size: 1.5em;
+}
+    
+#champsVides {
+        font-weight: bold;
+        width: 100%;
+        height: 100%;
+        line-height:50%;
+        font-size: 0.8em;
+        padding-left: 2%;
+        padding-right:  2%;
+    } 
+    
 /*--- section #signature ---*/ 
 /* pour pouvoir signer sur iPhone X à l'horizontal */    
     #signature {
@@ -730,10 +745,9 @@ footer a:hover {
         font-weight: bold;
         width: 100%;
         height: 100%;
-        line-height:300%;
-        font-size: 1.1em;
-        padding-top: 10%;
-        padding-bottom: 10%;
+        line-height:200%;
+        font-size: 1.2em;
+        padding-top: 14%;
         padding-left: 5%;
         padding-right:  5%;
     }   
@@ -777,13 +791,17 @@ footer a:hover {
         overflow: hidden;
         text-align:center;
     }
-
+    
+    .close {
+        font-size: 1.3em;
+    }    
+    
     #champsVides {
         font-weight: bold;
         width: 100%;
         height: 100%;
         line-height:200%;
-        font-size: 1em;
+        font-size: 0.8em;
         padding-top: 10%;
         padding-bottom: 10%;
     }   
