--- a/css/style.css
+++ b/css/style.css
@@ -653,12 +653,10 @@ footer a:hover {
     }
 
     #champsVides {
-        font-weight: bold;
-        width: 100%;
-        height: 100%;
-        line-height: 350%;
-        font-size: 1.1em;
-        padding-top: 20%;
+        line-height: 150%;
+        font-size: 1.5em;
+        padding-top: 8%;
+        padding-bottom: 12%;
         padding-left: 2%;
         padding-right: 2%;
     }
@@ -683,19 +681,17 @@ footer a:hover {
     }
 
 /*--- div #infos_station ---*/
-.close {
-    font-size: 1.5em;
-}
+    .close {
+        font-size: 1.5em;
+    }
     
-#champsVides {
-        font-weight: bold;
-        width: 100%;
-        height: 100%;
-        line-height:50%;
-        font-size: 0.8em;
-        padding-left: 2%;
-        padding-right:  2%;
-    } 
+    #champsVides {
+            line-height:100%;
+            font-size: 0.8em;
+            padding-left: 2%;
+            padding-right: 2%;
+            padding-top: 5%;
+        } 
     
 /*--- section #signature ---*/ 
 /* pour pouvoir signer sur iPhone X à l'horizontal */    
@@ -742,14 +738,11 @@ footer a:hover {
     }
 
     #champsVides {
-        font-weight: bold;
-        width: 100%;
-        height: 100%;
-        line-height:200%;
-        font-size: 1.2em;
-        padding-top: 14%;
+        line-height: 100%;
+        font-size: 0.8em;
+        padding-top: 5%;
         padding-left: 5%;
-        padding-right:  5%;
+        padding-right: 5%;
     }   
 }
 
@@ -797,10 +790,7 @@ footer a:hover {
     }    
     
     #champsVides {
-        font-weight: bold;
-        width: 100%;
-        height: 100%;
-        line-height:200%;
+        line-height:150%;
         font-size: 0.8em;
         padding-top: 10%;
         padding-bottom: 10%;
@@ -833,7 +823,7 @@ footer a:hover {
     
     /* positionnement du canvas */
     #canvas {
-        marrgin-top:0.5%;
+        margin-top:0.5%;
         margin-bottom: 0.5%;
     }
 
